# gainput

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/gainput/: GainputContainers.h  GainputInputDevice.h  GainputInputManager.h  gainput.h
lib/source/gainput/: GainputInputDevice.cpp  GainputInputManager.cpp  GainputInputMap.cpp
lib/source/gainput/builtin/: GainputInputDeviceBuiltIn.cpp
lib/source/gainput/keyboard/: GainputInputDeviceKeyboard.cpp  GainputInputDeviceKeyboardLinuxXI2.h  GainputInputDeviceKeyboardWinRaw.h
lib/source/gainput/mouse/: GainputInputDeviceMouse.cpp  GainputInputDeviceMouseEmscripten.h  GainputInputDeviceMouseLinuxXI2.h  GainputInputDeviceMouseMac.mm  GainputInputDeviceMouseWinRaw.h
lib/source/gainput/pad/: GainputInputDevicePad.cpp  GainputInputDevicePadLinux.h  GainputInputDevicePadMac.cpp
lib/source/gainput/touch/: GainputInputDeviceTouch.cpp
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt  basicsample_android.cpp  basicsample_android_generic.cpp  basicsample_ios.mm  basicsample_linux.cpp  basicsample_linux_xi2.cpp  basicsample_mac.mm  basicsample_win.cpp
samples/qt-example/: CMakeLists.txt
